<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- <item android:id="@+id/menu_share"
        android:showAsAction="always"
        android:title="@string/menu_share"
        android:actionProviderClass="com.actionbarsherlock.widget.ShareActionProvider" /> -->
    <item android:id="@+id/mapTypeToggleButton"
        android:title="@string/mapTypeToggleButton"
        android:showAsAction="ifRoom"
        android:actionViewClass="android.widget.ToggleButton" />
	<item android:id="@+id/areaToggleButton"
        android:title="@string/areaToggleButton"
        android:showAsAction="ifRoom"
        android:actionViewClass="android.widget.ToggleButton" />
	<item android:id="@+id/manulyToggleButton"
        android:title="@string/manulyToggleButton"
        android:showAsAction="ifRoom"
        android:actionViewClass="android.widget.ToggleButton" />
	<item android:id="@+id/redoButton"
        android:title="@string/redoButton"
        android:showAsAction="ifRoom"
        android:actionViewClass="android.widget.Button" />
	<item android:id="@+id/clearButton"
        android:title="@string/clearButton"
        android:showAsAction="ifRoom"
        android:actionViewClass="android.widget.Button" />
	<item android:id="@+id/exit"
        android:title="@string/exit"
        android:showAsAction="ifRoom" />
</menu>
