<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:orientation="horizontal" >
	
	    <ImageView
	        android:id="@+id/row_icon1"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:padding="10dp"
	        android:src="@drawable/ic_launcher" />
	
	    <TextView
	        android:id="@+id/row_title1"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center_vertical"
	        android:padding="10dp"
	        android:text="@string/vectorMapType"
	        android:textAppearance="@android:style/TextAppearance.Medium" />
	
	</LinearLayout>
	
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:orientation="horizontal" >
	
	    <ImageView
	        android:id="@+id/row_icon2"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:padding="10dp"
	        android:src="@drawable/ic_launcher" />
	
	    <TextView
	        android:id="@+id/row_title2"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center_vertical"
	        android:padding="10dp"
	        android:text="@string/calculateDist"
	        android:textAppearance="@android:style/TextAppearance.Medium" />
	
	</LinearLayout>
	
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:orientation="horizontal" >
	
	    <ImageView
	        android:id="@+id/row_icon3"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:padding="10dp"
	        android:src="@drawable/ic_launcher" />
	
	    <TextView
	        android:id="@+id/row_title3"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center_vertical"
	        android:padding="10dp"
	        android:text="@string/GPSPoint"
	        android:textAppearance="@android:style/TextAppearance.Medium" />
	
	</LinearLayout>
	
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:orientation="horizontal" >
	
	    <ImageView
	        android:id="@+id/row_icon4"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:padding="10dp"
	        android:src="@drawable/ic_launcher" />
	
	    <TextView
	        android:id="@+id/row_title4"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center_vertical"
	        android:padding="10dp"
	        android:text="@string/redraw"
	        android:textAppearance="@android:style/TextAppearance.Medium" />
	
	</LinearLayout>
	
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:orientation="horizontal" >
	
	    <ImageView
	        android:id="@+id/row_icon5"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:padding="10dp"
	        android:src="@drawable/ic_launcher" />
	
	    <TextView
	        android:id="@+id/row_title5"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center_vertical"
	        android:padding="10dp"
	        android:text="@string/clearAll"
	        android:textAppearance="@android:style/TextAppearance.Medium" />
	
	</LinearLayout>
	
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:orientation="horizontal" >
	
	    <ImageView
	        android:id="@+id/row_icon6"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:padding="10dp"
	        android:src="@drawable/ic_launcher" />
	
	    <TextView
	        android:id="@+id/row_title6"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center_vertical"
	        android:padding="10dp"
	        android:text="@string/exit"
	        android:textAppearance="@android:style/TextAppearance.Medium" />
	
	</LinearLayout>

</LinearLayout>
